Updated content for sports pages
Fencing and Cycling added and minor edits made to archery, and gymnastics, rowing.

--- a/archery.html
+++ b/archery.html
@@ -26,7 +26,7 @@
                 Archery has also been proven to produce a meditative state of mind, improving your mood, easing anxiety and depression.
             </p>
             <p>
-                On the left is Phoebe Paterson Pine MBE, paralympic athlete and gold medallist at the 2020 Tokyo Olympics, having first tried archery on a family holiday.
+                On the right is Phoebe Paterson Pine MBE, paralympic athlete and gold medallist at the 2020 Tokyo Olympics, having first tried archery on a family holiday.
             </p>
           </div>
           <div class="col">
