--- a/cycling.html
+++ b/cycling.html
@@ -19,26 +19,26 @@
           <div class="col">
             <h2>Cycling</h2>
              <p>
-                Gymnastics brings together strength, stamina, flexibility, and artistry.
-                It's a great sport for building strength and mobility.
-                And who hasn't wanted to do a backflip?
+                Cycling as a sport comes in a variety of different forms: road bicycle racing, track cycling, mountain bike racing, and BMX are just a few.
             </p>
             <p>
-              Pictured to the left is Simone Biles, the most decorated gymnast in American sporting history.
+              Cycling is also an environmentally friendly and economical form of transport, so it's a very practical sport to get started with!
             </p>
             <p>
-              But nurturing gymnastic abilities isn't just for elite athletes and children - 
-              adults can also benefit hugely from the increased co-ordination, agility, and power that gymnastics builds.
+                Stationary cycling is advocated as a rehabilitative exercise, particularly for lower limb injury, due to its low impact on joints.
+            </p>
+            <p>
+                Kadeena Cox OBE (right) is a British parasport sprinter and cyclist, winning multiple gold medals at the 2016 and 2020 Paralympic Games.
             </p>
           </div>
           <div class="col">
             <div class="sport-image-container">
-            <img src="./images/simone-biles.webp" alt="Simone Biles performing a flip on the balance beam at the Tokyo 2020 Olympics">
+            <img src="./images/kadeena-cox.webp" alt="Kadeena Cox celebrating after winning gold at the Rio 2016 Olympics.">
             </div>
             <div class="quote">
               <p>
-                "Always work hard and have fun in what you do because I think that's when you're more successful.
-                You have to choose to do it."
+                "I love pushing boundaries and proving that things aren’t impossible. 
+                I love achieving things that nobody else has and proving to others that your circumstances and disabilities don’t mean that you can’t be extraordinary. "
               </p>
             </div>
           </div>
