--- a/fencing.html
+++ b/fencing.html
@@ -19,26 +19,25 @@
           <div class="col">
             <h2>Fencing</h2>
              <p>
-                Gymnastics brings together strength, stamina, flexibility, and artistry.
-                It's a great sport for building strength and mobility.
-                And who hasn't wanted to do a backflip?
+                Fencing is a dynamic sport that derives from agility, strategy, and discipline.
+                It's well-rounded and excellent for improving general fitness, focus, problem solving and stress reduction.
             </p>
             <p>
-              Pictured to the left is Simone Biles, the most decorated gymnast in American sporting history.
+              In competitive fencing, there are three main events: foil, épée, and sabre, each with slightly different rules and shapes of blades.
             </p>
             <p>
-              But nurturing gymnastic abilities isn't just for elite athletes and children - 
-              adults can also benefit hugely from the increased co-ordination, agility, and power that gymnastics builds.
+              Sun Yiwen, pictured on the right, is a two-time team world champion épée fencer 
+              and in 2020 became the first Chinese fencer in history to win an Olympic gold medal in individual women's épée.
             </p>
           </div>
           <div class="col">
             <div class="sport-image-container">
-            <img src="./images/simone-biles.webp" alt="Simone Biles performing a flip on the balance beam at the Tokyo 2020 Olympics">
+            <img src="./images/sun-yiwen.jpeg" alt="Sun Yiwen in her fencing outfit holding her épée blade">
             </div>
             <div class="quote">
               <p>
-                "Always work hard and have fun in what you do because I think that's when you're more successful.
-                You have to choose to do it."
+                "I would not set a target and stop once I reach it. My goal has no limit.
+                Although I don’t set my ambitions very high, I will keep on improving."
               </p>
             </div>
           </div>
