--- a/gymnastics.html
+++ b/gymnastics.html
@@ -24,7 +24,7 @@
                 And who hasn't wanted to do a backflip?
             </p>
             <p>
-              Pictured to the left is Simone Biles, the most decorated gymnast in American sporting history.
+              Pictured to the right is Simone Biles, the most decorated gymnast in American sporting history.
             </p>
             <p>
               But nurturing gymnastic abilities isn't just for elite athletes and children - 
