--- a/rowing.html
+++ b/rowing.html
@@ -26,7 +26,7 @@
                 So if you don't have access to a boat or a club, using a rowing machine at the gym can also bring a lot of health benefits.
             </p>
             <p>
-              On the right is Katherine Grainger, who became a beloved British sporting hero in the London 2012 Olympics when she and her rowing partner Anna Watkins won gold in the double sculls final.
+              On the right is Katherine Grainger, who became a beloved British sporting hero during the London 2012 Olympics when she and her rowing partner Anna Watkins won gold in the double sculls final.
               She is now the chair of UK Sport.
             </p>
           </div>
