All sports pages content updated

--- a/hockey.html
+++ b/hockey.html
@@ -19,26 +19,23 @@
           <div class="col">
             <h2>Hockey</h2>
              <p>
-                Gymnastics brings together strength, stamina, flexibility, and artistry.
-                It's a great sport for building strength and mobility.
-                And who hasn't wanted to do a backflip?
+                Hockey is a fast-paced ball-and-stick sport that required co-ordination, stamina and agility.
+                As a team sport, it's a great way to make friends and improve your communication and confidence.
             </p>
             <p>
-              Pictured to the left is Simone Biles, the most decorated gymnast in American sporting history.
+              As an all-rounder cardiovascular exercise, it also comes with increased strength and muscle tone, and is a proven stress-reliever.
             </p>
             <p>
-              But nurturing gymnastic abilities isn't just for elite athletes and children - 
-              adults can also benefit hugely from the increased co-ordination, agility, and power that gymnastics builds.
+              Felice Albers (right) was recently named best player in the world by FIH, the international hockey federation.
             </p>
           </div>
           <div class="col">
             <div class="sport-image-container">
-            <img src="./images/simone-biles.webp" alt="Simone Biles performing a flip on the balance beam at the Tokyo 2020 Olympics">
+            <img src="./images/felice-albers.jpeg" alt="Felice Albers celebrating after scoring at the 2022 Hockey World Cup">
             </div>
             <div class="quote">
               <p>
-                "Always work hard and have fun in what you do because I think that's when you're more successful.
-                You have to choose to do it."
+                "Lots of training and a good balance between healthy eating and the occasional treat ;-). Enjoy life a little too."
               </p>
             </div>
           </div>
