--- a/swimming.html
+++ b/swimming.html
@@ -19,26 +19,23 @@
           <div class="col">
             <h2>Swimming</h2>
              <p>
-                Gymnastics brings together strength, stamina, flexibility, and artistry.
-                It's a great sport for building strength and mobility.
-                And who hasn't wanted to do a backflip?
+                Swimming builds endurance, muscle strength, and cardiovascular fitness. It's a low impact exercise, so a great option if you're worried about your joints.
             </p>
             <p>
-              Pictured to the left is Simone Biles, the most decorated gymnast in American sporting history.
+              It was also discovered recently that cold water swimming may protect the brain from degenerative diseases such as dementia.
             </p>
             <p>
-              But nurturing gymnastic abilities isn't just for elite athletes and children - 
-              adults can also benefit hugely from the increased co-ordination, agility, and power that gymnastics builds.
+              Pictured on the right is Katie Ledecky, an American competitive swimmer widely regarded as one of the greatest of all time.
+              She has won a total of 46 medals in major international competitions and broken sixteen world records.
             </p>
           </div>
           <div class="col">
             <div class="sport-image-container">
-            <img src="./images/simone-biles.webp" alt="Simone Biles performing a flip on the balance beam at the Tokyo 2020 Olympics">
+            <img src="./images/katie-ledecky.jpeg" alt="Katie Ledecky celebrating in the pool.">
             </div>
             <div class="quote">
               <p>
-                "Always work hard and have fun in what you do because I think that's when you're more successful.
-                You have to choose to do it."
+                "Success is not final, failure is not fatal. It's the courage to continue that counts."
               </p>
             </div>
           </div>
