--- a/gymnastics.html
+++ b/gymnastics.html
@@ -10,9 +10,9 @@
 <body>
     <header>
         <img src="./images/20240318_123839_0000 (1).png" alt="logo" class="logo">
-        <a href="page3.html">CONTACT</a>
-        <a href="page2.html">WHO WE ARE</a>
-        <a href="Index.html">HOME</a>
+        <a href="page3.html">CONTACT US</a>
+        <a href="gallery.html">GALLERY</a>
+        <a href="homepage.html">HOME</a>
     </header>
     <div class="main-discripton">
         <div class="row">
