--- a/homepage.html
+++ b/homepage.html
@@ -82,10 +82,7 @@
 
 
 <footer>
-
-    <a href="contacts.html">Contact</a>
-    <a href="Social.html">Social</a>
-    <a href="terms-and-conditions.html">Terms and Conditions</a>
+    <a href="contacts.html">Contact Us</a>
 </footer>
 
 </body>
