--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
         <img src="images_1/20240318_123839_0000.png" alt="logo" class="logo">
 
         <a href="contact.html">CONTACT US</a>
-        <a href="page2.html">GALLERY</a>
+        <a href="index.html">GALLERY</a>
         <a href="homepage.html">HOME</a>
 
     </header>
