--- a/homepage.html
+++ b/homepage.html
@@ -21,7 +21,7 @@
    
 
         <a href="contact.html">CONTACT US</a>
-        <a href="page2.html">GALLERY</a>
+        <a href="index.html">GALLERY</a>
         <a href="homepage.html">HOME</a>
     
     
